Working on 'my Skills & Fixes' * adding Skills SVG [css,html,c,python..] * fix responsive boxes * fix layout issues between desktop/mobile - width. * general fixes. (nuke unsued code, cleanup)

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,6 +4,7 @@
 $color-dark: #0d1117;
 $color-dark2: #161b22;
 $white: #ffffffff;
+$border-radius: 8px;
 
 * {
     margin: 0;
@@ -20,10 +21,6 @@ body {
     ::-webkit-scrollbar {
         width: 0;      
     }
-}
-
-:root {
-    --size-border-radius: 8px;
 }
 
 footer{
@@ -48,7 +45,7 @@ footer{
         color: white;
         margin: 10px;
         border: 1px solid #33445c;
-        border-radius: var(--size-border-radius);
+        border-radius: $border-radius;
         &:hover {
             background-color: #212c3b;
             color: white;
@@ -71,13 +68,15 @@ footer{
     }
     .active {
         border: 1px solid #ffffff;
-        animation: activ 2s linear infinite;
+        animation: activ 1.5s linear infinite;
     }
     border-bottom: 1px solid #2c3847;
     background-color: $color-dark2 !important;
     margin-bottom: -105px;
     position: fixed;
     width: 100%;
+    z-index: 300;
+    overflow: hidden;
     @media screen and (max-width: 990px) {
         .navbar-nav {
             height: 100vh;
@@ -105,6 +104,8 @@ footer{
     scroll-snap-type: y mandatory;
     overflow-y: scroll;
     height: 100vh;
+    margin-top: 10px;
+
     section {
         height: 100vh;
         display: flex;
@@ -165,61 +166,72 @@ footer{
         }
     }
 }
+
 .container-skills {
-    width: 90%;
-    height: auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    flex-flow: wrap;
-    h1 {
-        display: flex;
-        justify-content: center;
-        align-self: center;
-        width: 100%;
-        height: 20%;
-    }
-  }
-  .container-cb {
-    width: 90%;
-    height: auto;
-    background-color: red;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    flex-flow: wrap;
-   
-  }
+   width: 90%;
+   height: auto;
+   display: flex;
+   flex-direction: row;
+   justify-content: space-around;
+   flex-flow: wrap;
+   padding: 30px;
+   margin-top: 0;
+   flex-wrap: wrap;
+}
+.container-cb {
+   width: 90%;
+   height: auto;
+   background-color: red;
+   display: flex;
+   flex-direction: row;
+   justify-content: space-around;
+   flex-flow: wrap;
+}
 .box {
-    width: 30%;
-    height: 220px;
-    margin: 20px;
+    width: 27%;
+    height: 240px;
+    margin-bottom: 30px;
+    margin-top: 60px;
+    margin-left: -5px;
+    margin-right: -5px;
     box-sizing: border-box;
     font-size: 35px;
     text-align: center;
-    background-color: #161b228c;
+    background-color: #161b2269;
     border: 1px solid #33445c73;
     box-shadow: 0 3px 10px #2027318c;
-    border-radius: 8px;
+    border-radius: $border-radius;
     transition: all 0.2s ease-in-out;
+    svg {
+        transition: all 0.2s ease-in-out;
+        margin-top: -70px;
+        max-width: 25%;
+    }
     &:hover {
         background: #191f27;
         box-shadow: 0 3px 20px #293341;
         border: 1px solid #374963;
+        transition: all 0.2s;
+        svg {
+            transition: all 0.2s;
+            filter: brightness(105%) saturate(122%) contrast(97%) drop-shadow(0 3px 5px #475970);
+            -webkit-filter: brightness(105%) saturate(122%) contrast(97%) drop-shadow(0px 3px 5px #475970);
+            -moz-filter: brightness(105%) saturate(122%) contrast(97%) drop-shadow(0px 3px 5px #475970);
+        }
     }
     .box2 {
         margin-top: -25px;
     }
     .box3 {
-        margin-top: -5px;
+       margin-top: -10px;
     }
     .middle-text {
+        width: 70%;
         font-size: 14px;
         overflow: hidden;
         text-overflow: ellipsis;
         display: -webkit-box;
-        -webkit-line-clamp: 4; /* number of lines to show */
-                line-clamp: 4; 
+        -webkit-line-clamp: 4; line-clamp: 4; 
         -webkit-box-orient: vertical;
     }
 }
@@ -278,8 +290,46 @@ footer{
         opacity: 1;
     }
 }
+@media screen and (max-width: 990px) {
+    .section-pages {
+        margin-top: 20px;
+    }
+    .container-skills {
+        width: 100%;
+        margin-top: -85px;
+        padding-left: 5px;
+        padding-right: 5px;
+      }
+    
+    .box {
+        width: 43%;
+        height: 190px;
+        font-size: 14px;
+        margin-bottom: -30px;
+        svg {
+            margin-top: -25px;
+        }
+        .box3 {
+            margin-top: 10px;
+        }
+        .middle-text {
+            font-size: 10px;
+            margin-top: 30px;
+            margin-bottom: 0;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-line-clamp: 8; /* number of lines to show */
+                    line-clamp: 8; 
+            -webkit-box-orient: vertical;
+        }  
+    } 
+}
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 500px) {
+    .section-pages {
+        margin-top: 20px;
+    }
     .container-skills {
         width: 100%;
         height: auto;
@@ -287,21 +337,30 @@ footer{
         flex-direction: row;
         justify-content: space-around;
         flex-flow: wrap;
-        margin-top: -20px;
+        margin-top: -85px;
+        padding-left: 5px;
+        padding-right: 5px;
       }
     
     .box {
-        width: 40%;
-        height: 165px;
-        margin: 20px;
+        width: 43%;
+        height: 190px;
         box-sizing: border-box;
         font-size: 14px;
         text-align: center;
+        margin-bottom: -30px;
+        svg {
+            margin-top: -25px;
+        }
         .box2 {
             height: 115px;
         }
+        .box3 {
+
+            margin-top: 10px;
+        }
         .middle-text {
-            font-size: 8px;
+            font-size: 10px;
             margin-top: 30px;
             margin-bottom: 5px;
             overflow: hidden;
@@ -315,5 +374,4 @@ footer{
     .to-top {
         top: 87%;
     }
-
 }
